# lab-openshift

./: Dockerfile  Makefile  Pipfile  README.md  pyproject.toml  requirements.txt  setup.cfg  skaffold.yaml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.devcontainer/scripts/: install-tools.sh  setup-lab.sh
.github/workflows/: ci.yml
.tekton/: pipeline.yaml  task-buildah.yaml  tasks.yaml  triggertemplate.yaml
.tekton/events/: trigger_binding.yaml
k8s/: deployment.yaml  postgresql.yaml  pv.yaml  service.yaml
k8s/postgresql/: configmap.yaml  service.yaml  statefulset.yaml
service/: __init__.py  config.py  models.py  routes.py
service/common/: __init__.py  error_handlers.py  log_handlers.py  status.py
tests/: test_cli_commands.py  test_models.py  test_routes.py
