[tool.poetry]
name = "petshop"
version = "0.1.0"
description = "Pet Shop Service"
authors = ["John Rofrano <jjr12@nyu.edu>"]
license = "Apache 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
Flask = "^3.0.2"
flask-sqlalchemy = "3.0.2"
psycopg = {extras = ["binary"], version = "^3.1.12"}
retry2 = "^0.9.5"
python-dotenv = "^1.0.1"
gunicorn = "^21.2.0"
honcho = "^1.1.0"

[tool.poetry.group.dev.dependencies]
pylint = "^3.0.2"
flake8 = "^6.1.0"
black = "^23.10.1"
pytest = "^7.4.3"
pytest-pspec = "^0.0.4"
pytest-cov = "^4.1.0"
factory-boy = "^3.3.0"
coverage = "^7.3.2"
httpie = "^3.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
